<resources>
    <string name="app_name">Report IT</string>
    <string name="signup_msg">Create Account?</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_msg">Already have an Account?</string>
    <string name="email_address">Email Address</string>
    <string name="title_activity_home">Home</string>
    <string name="fire_outbreak">Fire Outbreak</string>
    <string name="accident">Accident</string>
    <string name="garbage">Garbage</string>
    <string name="crime">Crime</string>
    <string name="natural_disaster">Natural Disaster</string>
    <string name="home_msg">Select Required Report</string>
    <string name="cam_msg">Take a Picture</string>
    <string name="accident_cat_det">Accidents and dangerous occurrences are required to be reported to the Authority in line with the Safety, Only fatal and non-fatal injuries are reportable. Diseases, occupational illnesses or any impairments of mental condition are not reportable.</string>
    <string name="crime_cat_det">We aim to be courteous, helpful, respectful and professional.  If you are upset about a crime or other traumatic incident, we will respond to your needs in a caring and sensitive manner.</string>
    <string name="fire_outbreak_cat_det">A fire prevention strategy and a fire risk assessment should include detail and a full consideration of all of the issues - including issues arising from heat, oxygen and fuel. Advice on these three elements follows. This advice is not exhaustive and is given in no particular order.</string>
    <string name="garbage_cat_det">Illegal dumping is when material (bags, construction debris, appliances, etc.) is dumped from a vehicle onto public or private property. You can report chronic illegal dumping. The Department of Sanitation will monitor the location and remove the garbage. P.S. Only Outdoor Garbage.</string>
    <string name="natural_disaster_cat_det">Disasters should include only natural events such as earthquakes, volcanic eruptions and hurricanes, and situations sparked by human actions, such as oil spills, radiation leaks and chemical accidents.</string>
    <string name="pps_number">PPS Number</string>
    <string name="logout">LOGOUT</string>
    <string name="invalid">invalid</string>
    <string name="login_success_msg">You\'ve successfully logged in.</string>
    <string name="login_failed_msg">Sorry this User doesn\'t exist.</string>
    <string name="authenticating">Authenticating…</string>
    <string name="logout_msg">You\'ve successfully Logged out.</string>
    <string name="allow_location_msg">ALLOW LOCATION TO CONTINUE!</string>
    <string name="cam_support_msg">Camera not supported</string>
    <string name="gps_msg">Your phone GPS is off</string>
    <string name="create_acc_success_msg">Account Created Successfully!</string>
    <string name="acct_create_fail_msg">Sorry! this User already exist.</string>
    <string name="accnt_create_error_msg">Sorry! an error occurred.</string>
    <string name="report_summary">Report Summary</string>
    <string name="submit">Submit</string>
    <string name="next">Continue</string>
    <string name="click_to_view">Click to view</string>
    <string name="gps_co_ordinate">0.0.0.0.0, 0.0.0.0.0</string>
    <string name="report_success_msg">Thank you for taking your time to do this.</string>
    <string name="report_sent">REPORT SENT</string>
    <string name="finding_gps_nsg">Finding your GPS Co-Ordinates…</string>
    <string name="gps_update_msg">GPS Co-Ordinate updated.</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="invalid_username">Username is invalid</string>
    <string name="invalid_password">Password is invalid</string>
    <string name="invalid_ppsno">PPS Number is invalid</string>
    <string name="no_internet">No Internet Connection!</string>
    <string name="empty_username_msg">Username cannot be empty.</string>
    <string name="empty_password_msg">Password cannot be empty.</string>
    <string name="report_address">Report Address</string>
    <string name="add_details_optional">Add Details (Optional)</string>
    <string name="time_format">hh:mm a</string>
    <string name="date_format">dd-MM-yyyy</string>
    <string name="title_activity_maps">Map</string>
</resources>
