<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/report_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:text="@string/home_msg"
        android:textColor="#000000"
        android:textSize="18dp" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="80dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <TextView
                android:id="@+id/report_accident"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginBottom="33dp"
                android:background="#000000"
                android:gravity="center"
                android:letterSpacing="0.2"
                android:onClick="setReportCategoryDetails"
                android:padding="16dp"
                android:text="@string/accident"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/report_crime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="33dp"
                android:background="#000000"
                android:gravity="center"
                android:letterSpacing="0.2"
                android:onClick="setReportCategoryDetails"
                android:padding="16dp"
                android:text="@string/crime"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/report_fire_ourbreak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="33dp"
                android:background="#000000"
                android:gravity="center"
                android:letterSpacing="0.2"
                android:onClick="setReportCategoryDetails"
                android:padding="16dp"
                android:text="@string/fire_outbreak"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/report_garbage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="33dp"
                android:background="#000000"
                android:gravity="center"
                android:letterSpacing="0.2"
                android:onClick="setReportCategoryDetails"
                android:padding="16dp"
                android:text="@string/garbage"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/report_natural_disaster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="33dp"
                android:background="#000000"
                android:gravity="center"
                android:letterSpacing="0.2"
                android:onClick="setReportCategoryDetails"
                android:padding="16dp"
                android:text="@string/natural_disaster"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_button"
                android:gravity="center"
                android:letterSpacing="0.2"
                android:onClick="setReportCategoryDetails"
                android:padding="12dp"
                android:text="@string/logout"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/ppsno_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:text=""
        android:textColor="@color/dark_red"
        android:textSize="12dp" />

</RelativeLayout>