<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_report_details">

    <TextView
        android:id="@+id/report_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:text="@string/report_summary"
        android:textColor="#000000"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="65dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/user_icon"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:letterSpacing="0.1"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    android:textSize="20sp"
                    tools:ignore="RtlHardcoded,UnusedAttribute" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="#4a5a71"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/lock_password"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/passwordw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:letterSpacing="0.1"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    android:textSize="20dp"
                    tools:ignore="RtlHardcoded,SpUsage" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/lock_password"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/passwsord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:letterSpacing="0.1"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    android:textSize="20dp"
                    tools:ignore="RtlHardcoded,SpUsage" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/lock_password"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:letterSpacing="0.1"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    android:textSize="20dp"
                    tools:ignore="RtlHardcoded,SpUsage" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4a5a71"></LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/report_image"
            android:layout_width="200dp"
            android:layout_height="192dp"

            tools:ignore="ContentDescription" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <TextView
            android:id="@+id/testbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="25dp"
            android:background="#000000"
            android:gravity="center"
            android:letterSpacing="0.2"
            android:onClick="setReportCategoryDetails"
            android:padding="16dp"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            android:textSize="19sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>